2007-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/__init__.py:
	* gaupol/gtk/main.py:
	Move stuff from main to __init__ and clean up code.

2007-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duration-dialog.glade:
	* data/glade/framerate-dialog.glade:
	* data/glade/shift-dialog.glade:
	* data/glade/transform-dialog.glade:
	* gaupol/agents/position.py:
	* gaupol/gtk/agents/edit.py:
	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/position.py:
	* gaupol/gtk/agents/util.py:
	* gaupol/gtk/dialogs/duration.py:
	* gaupol/gtk/dialogs/framerate.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/shift.py:
	* gaupol/gtk/dialogs/transform.py:
	Add contracts and clean up code.

2007-06-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/spellcheck-dialog.glade:
	Redesign the whole dialog.

	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/spellcheck.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/spellcheck.py:
	Add contracts and clean up code.

	* gaupol/gtk/dialogs/search.py (_set_text):
	Fix scrolling to a mark of the match.

2007-06-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/liner.py (_split_on_clauses):
	Check for a variance (actually std/mean) too great in line lengths if
	text contains three or more lines.

2007-06-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/search-dialog.glade:
	* data/ui.xml:
	* gaupol/agents/search.py:
	* gaupol/finder.py:
	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/search.py:
	* gaupol/gtk/agents/util.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/parser.py:
	Add contracts and clean up code.

2007-06-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/menu.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/util.py:
	* gaupol/gtk/application.py:
	Add contracts and clean up code.

2007-06-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* gaupol/gtk/dialogs/file/open.py: